# server/genapi/go/model_timer.go
@@ -32,8 +32,8 @@ type Timer struct {
 
 	RetryPolicy RetryPolicy `json:"retryPolicy,omitempty"`
 
-	// Timeout for the HTTP callback
-	CallbackTimeout string `json:"callbackTimeout,omitempty"`
+	// Timeout for the HTTP callback in seconds
+	CallbackTimeoutSeconds int32 `json:"callbackTimeoutSeconds,omitempty"`
 
 	// When the timer was created
 	CreatedAt time.Time `json:"createdAt"`
